--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,6 +13,7 @@ dependencies:
   auto_size_text: ^3.0.0
   google_fonts: ^6.2.1
   day_night_themed_switch: ^1.0.0
+  auto_size_text_field: ^2.2.3
 
 dev_dependencies:
   flutter_test:
