--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,6 +14,7 @@ dependencies:
   google_fonts: ^6.2.1
   day_night_themed_switch: ^1.0.0
   auto_size_text_field: ^2.2.3
+  animated_theme_switcher: ^2.0.10
 
 dev_dependencies:
   flutter_test:
