--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,6 +20,8 @@ dependencies:
   get_it: ^7.7.0
   shared_preferences: ^2.2.3
   intl: ^0.19.0
+  url_launcher: ^6.3.0
+  simple_icons: ^10.1.3
 
 dev_dependencies:
   flutter_test:
