--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,6 +22,7 @@ dependencies:
   intl: ^0.19.0
   url_launcher: ^6.3.0
   simple_icons: ^10.1.3
+  fraction: ^5.0.2
 
 dev_dependencies:
   flutter_test:
