--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,6 +23,7 @@ dependencies:
   url_launcher: ^6.3.0
   simple_icons: ^10.1.3
   fraction: ^5.0.2
+  timeago: ^3.7.0
 
 dev_dependencies:
   flutter_test:
