--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,6 +24,7 @@ dependencies:
   simple_icons: ^10.1.3
   fraction: ^5.0.2
   timeago: ^3.7.0
+  flutter_bloc: ^8.1.6
 
 dev_dependencies:
   flutter_test:
