--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,6 +27,7 @@ dependencies:
   flutter_bloc: ^8.1.6
   injectable: ^2.4.2
   logger: ^2.4.0
+  flutter_slidable: ^3.1.1
 
 dev_dependencies:
   flutter_test:
