--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,7 @@ dependencies:
   injectable: ^2.4.2
   logger: ^2.4.0
   flutter_slidable: ^3.1.1
+  tutorial_coach_mark: ^1.2.11
 
 dev_dependencies:
   flutter_test:
