--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,6 +29,7 @@ dependencies:
   logger: ^2.4.0
   flutter_slidable: ^3.1.1
   tutorial_coach_mark: ^1.2.11
+  lottie: ^3.1.2
 
 dev_dependencies:
   flutter_test:
@@ -41,6 +42,8 @@ flutter:
 
   assets:
     - assets/google_fonts/
+    - assets/gestures/
+
 
   fonts:
     - family: CalculatorIcons
