--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,7 +21,6 @@ dependencies:
   shared_preferences: ^2.2.3
   intl: ^0.19.0
   url_launcher: ^6.3.0
-  simple_icons: ^10.1.3
   fraction: ^5.0.2
   timeago: ^3.7.0
   flutter_bloc: ^8.1.6
@@ -42,7 +41,7 @@ flutter:
 
   assets:
     - assets/google_fonts/
-    - assets/gestures/
+    - assets/lottie/
 
 
   fonts:
