--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,10 +14,7 @@ dependencies:
   google_fonts: ^6.2.1
   day_night_themed_switch: ^1.0.0
   auto_size_text_field: ^2.2.3
-  animated_theme_switcher:
-    git: https://github.com/mllrr96/animated_theme_switcher.git
   equatable: ^2.0.5
-  get_it: ^8.0.3
   shared_preferences: ^2.2.3
   intl: ^0.20.2
   url_launcher: ^6.3.0
@@ -30,6 +27,8 @@ dependencies:
   lottie: ^3.1.2
   system_theme: ^3.0.0
   get: ^4.7.2
+  smooth_page_indicator: ^1.2.1
+  lucide_icons: ^0.257.0
 
 dev_dependencies:
   flutter_test:
