--- a/.github/workflows/flutter-build-apk-ipa.yaml
+++ b/.github/workflows/flutter-build-apk-ipa.yaml
@@ -4,7 +4,7 @@ on:
   workflow_dispatch:
   push:
     tags:
-    - '*'
+      - '*'
 
 jobs:
   build:
@@ -16,22 +16,25 @@ jobs:
           channel: "stable"
           architecture: x64
           cache: true
+
       - uses: actions/setup-java@v2
         with:
           distribution: 'zulu'
           java-version: '17'
           cache: 'gradle'
+
       - name: Run flutter doctor
         run: flutter doctor -v
+
       - name: Run pub get and build runner
         run: |
           flutter pub get
 
       - name: Build APK
-        run: | 
+        run: |
           flutter build apk --release
-          cd build/app/outputs/apk/release
-          mv *.apk Neumorphic-Calculator-${GITHUB_REF#refs/*/}.apk
+          flutter build apk --split-per-abi
+
       - name: Build iPA
         run: |
           flutter build ios --release --no-codesign
@@ -41,6 +44,15 @@ jobs:
           ln -s ../Runner.app
           cd ..
           zip -r Neumorphic-Calculator-${GITHUB_REF#refs/*/}.ipa Payload
+
+      - name: Rename Files
+        run: |
+          cd build/app/outputs/flutter-apk
+          mv app-armeabi-v7a-release.apk Neumorphic-Calculator-${GITHUB_REF#refs/*/}--armeabi-v7a.apk
+          mv app-arm64-v8a-release.apk Neumorphic-Calculator-${GITHUB_REF#refs/*/}--arm64-v8a.apk
+          mv app-x86_64-release.apk Neumorphic-Calculator-${GITHUB_REF#refs/*/}--x86_64.apk
+          mv app-release.apk  Neumorphic-Calculator-${GITHUB_REF#refs/*/}-universal.apk
+
       - name: Create Release
         uses: ncipollo/release-action@v1.13.0
         with:
