--- a/.github/workflows/flutter-build-apk-ipa.yaml
+++ b/.github/workflows/flutter-build-apk-ipa.yaml
@@ -20,6 +20,9 @@ jobs:
         with:
           distribution: 'zulu'
           java-version: '17'
+#       This is workaround until cache action is fixed
+#       see https://github.com/actions/setup-java/issues/343
+        continue-on-error: true
 
       - name: Run flutter doctor
         run: flutter doctor -v
@@ -45,10 +48,10 @@ jobs:
 
       - name: Rename Files
         run: |
-          cd build/app/outputs/flutter-apk
-          mv app-armeabi-v7a-release.apk Neumorphic-Calculator-${GITHUB_REF#refs/*/}--armeabi-v7a.apk
-          mv app-arm64-v8a-release.apk Neumorphic-Calculator-${GITHUB_REF#refs/*/}--arm64-v8a.apk
-          mv app-x86_64-release.apk Neumorphic-Calculator-${GITHUB_REF#refs/*/}--x86_64.apk
+          cd build/app/outputs/apk/release
+          mv app-armeabi-v7a-release.apk Neumorphic-Calculator-${GITHUB_REF#refs/*/}-armeabi-v7a.apk
+          mv app-arm64-v8a-release.apk Neumorphic-Calculator-${GITHUB_REF#refs/*/}-arm64-v8a.apk
+          mv app-x86_64-release.apk Neumorphic-Calculator-${GITHUB_REF#refs/*/}-x86_64.apk
           mv app-release.apk  Neumorphic-Calculator-${GITHUB_REF#refs/*/}-universal.apk
 
       - name: Create Release
