Fix workflow and iOS project

--- a/.github/workflows/flutter-build-release-files.yaml
+++ b/.github/workflows/flutter-build-release-files.yaml
@@ -39,11 +39,11 @@ jobs:
         run: |
           flutter build ios --release --no-codesign
           cd build/ios/iphoneos
-          mkdir -p Payload
-          cp -R Runner.app Payload/
+          mkdir Payload
+          cd Payload
+          ln -s ../Runner.app
           cd ..
-          zip -r Neumorphic-Calculator-${GITHUB_REF_NAME}.ipa Payload
-
+          zip -r Neumorphic-Calculator-${GITHUB_REF#refs/*/}.ipa Payload
 
       - name: Rename APK Files
         run: |
