--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,7 +12,6 @@ dependencies:
   math_expressions: ^3.0.0
   auto_size_text: ^3.0.0
   google_fonts: ^6.2.1
-  day_night_themed_switch: ^1.0.0
   auto_size_text_field: ^2.2.3
   equatable: ^2.0.5
   shared_preferences: ^2.2.3
@@ -28,6 +27,7 @@ dependencies:
   get: ^4.7.2
   smooth_page_indicator: ^1.2.1
   lucide_icons: ^0.257.0
+  flutter_launcher_icons: ^0.14.4
 
 dev_dependencies:
   flutter_test:
