--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,7 @@ dependencies:
   smooth_page_indicator: ^1.2.1
   lucide_icons: ^0.257.0
   flutter_launcher_icons: ^0.14.4
+  package_info_plus: ^8.3.0
 
 dev_dependencies:
   flutter_test:
