--- a/.github/workflows/flutter-build-release-files.yaml
+++ b/.github/workflows/flutter-build-release-files.yaml
@@ -32,8 +32,10 @@ jobs:
 
       - name: Build APK
         run: |
-          flutter build apk --release
-          flutter build apk --split-per-abi
+          flutter build apk --release --build-name=1.0.3 --build-number=4
+          flutter build apk --release --split-per-abi --target-platform=android-arm64 --build-number=3
+          flutter build apk --release --split-per-abi --target-platform=android-arm --build-number=2
+          flutter build apk --release --split-per-abi --target-platform=android-x64 --build-number=1
 
       - name: Build iPA
         run: |
