Update workflow and pubspec to add flutter version

--- a/.github/workflows/flutter-build-release-files.yaml
+++ b/.github/workflows/flutter-build-release-files.yaml
@@ -15,6 +15,7 @@ jobs:
         with:
           channel: "stable"
           architecture: x64
+          flutter-version-file: pubspec.yaml
 
       - name: Setup Java
         continue-on-error: true
