--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,10 +1,11 @@
 name: neumorphic_calculator
 description: "A new Flutter project."
-publish_to: 'none' 
+publish_to: 'none'
 version: 1.0.3
 
 environment:
   sdk: '>=3.4.3 <4.0.0'
+  flutter: 3.32.5
 dependencies:
   flutter:
     sdk: flutter
@@ -34,7 +35,7 @@ dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_lints: ^5.0.0
-  build_runner: 
+  build_runner:
 flutter:
   uses-material-design: true
 
