--- a/.github/workflows/flutter-build-release-files.yaml
+++ b/.github/workflows/flutter-build-release-files.yaml
@@ -15,14 +15,14 @@ jobs:
         with:
           channel: "stable"
           architecture: x64
-          flutter-version-file: pubspec.yaml
+          flutter-version: '3.32.5'
 
       - name: Setup Java
         continue-on-error: true
         uses: actions/setup-java@v2
         with:
           distribution: 'zulu'
-          java-version: '21'
+          java-version: '17'
 
       - name: Run flutter doctor
         run: flutter doctor -v
