--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,7 @@
 name: neumorphic_calculator
 description: "A new Flutter project."
 publish_to: 'none'
-version: 1.0.3
+version: 1.0.3+1
 
 environment:
   sdk: '>=3.4.3 <4.0.0'
